services.yaml
apiVersion: v1
kind: Service
metadata:
  name: material-escolar-beckend
  namespace: build
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: material-escolar-beckend
status:
  loadBalancer: {}
